--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^10.4.16",
     "firebase": "^10.4.0",
     "formik": "^2.4.5",
+    "lucide-react": "^0.424.0",
     "nanoid": "^5.0.1",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
