--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
     "autoprefixer": "^10.4.16",
+    "embla-carousel-react": "^8.1.8",
+    "embla-carousel-wheel-gestures": "^8.0.1",
     "firebase": "^10.4.0",
     "formik": "^2.4.5",
     "lucide-react": "^0.424.0",
